<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>laserscan_to_pointcloud</name>
  <version>2.0.0</version>
  <description>ROS2 package to convert and assemble sensor_msgs::LaserScan to sensor_msgs::PointCloud2 with PX4 integration</description>
  <maintainer email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</maintainer>
  <license>BSD</license>
  <author email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  
  <build_depend>eigen</build_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>